Fixed dropdown menu alignment on ballads page

--- a/src/main/resources/static/css/partials/_ballads.scss
+++ b/src/main/resources/static/css/partials/_ballads.scss
@@ -209,13 +209,13 @@ html {
       #sort-list {
         cursor: pointer;
         display: none;
-        left: 148px;
+        // left: 148px;
         list-style: none;
         margin: 0;
         padding: 0;
         position: absolute;
         // right: 35px;
-        top: 12px;
+        top: 36px;
         width: 60px;
 
         li {
